--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -55,6 +55,7 @@
             )
         );
         UpdateContext({IsLoadingGetAllFiles: false});
+        Set(isLoading, false);
 
     ScreenContainer2 As groupContainer.verticalAutoLayoutContainer:
         DropShadow: =DropShadow.Light
