--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -278,6 +278,7 @@
                         PaddingLeft: =0
                         Size: =13
                         Text: ="Line No."
+                        Visible: =false
                         X: =42
                         Y: =17
                         ZIndex: =12
@@ -289,6 +290,7 @@
                         FontColor: =
                         Height: =40
                         Value: =ThisItem.Line_No
+                        Visible: =false
                         Width: =150
                         X: =42
                         Y: =40
@@ -313,6 +315,7 @@
                         PaddingLeft: =0
                         Size: =13
                         Text: ="Type"
+                        Visible: =false
                         Width: =208
                         X: =218
                         Y: =17
@@ -325,6 +328,7 @@
                         FontColor: =
                         Height: =40
                         Value: =ThisItem.Type
+                        Visible: =false
                         Width: =208
                         X: =218
                         Y: =40
@@ -349,6 +353,7 @@
                         PaddingLeft: =0
                         Size: =13
                         Text: ="Item No."
+                        Visible: =false
                         Width: =194
                         X: =455
                         Y: =17
@@ -361,6 +366,7 @@
                         FontColor: =
                         Height: =36
                         Value: =ThisItem.Item_No
+                        Visible: =false
                         Width: =194
                         X: =455
                         Y: =42
@@ -385,6 +391,7 @@
                         PaddingLeft: =0
                         Size: =13
                         Text: ="Location Code"
+                        Visible: =false
                         Width: =208
                         X: =676
                         Y: =17
@@ -397,6 +404,7 @@
                         FontColor: =
                         Height: =36
                         Value: =ThisItem.Location_Code
+                        Visible: =false
                         Width: =208
                         X: =676
                         Y: =40
@@ -421,6 +429,7 @@
                         PaddingLeft: =0
                         Size: =13
                         Text: ="Posting Group"
+                        Visible: =false
                         Width: =194
                         X: =911
                         Y: =17
@@ -433,6 +442,7 @@
                         FontColor: =
                         Height: =30
                         Value: =ThisItem.Posting_Group
+                        Visible: =false
                         Width: =194
                         X: =911
                         Y: =40
@@ -457,6 +467,7 @@
                         PaddingLeft: =0
                         Size: =13
                         Text: ="Quantity"
+                        Visible: =false
                         Width: =124
                         X: =1130
                         Y: =17
@@ -471,6 +482,7 @@
                         OnChange: |-
                             =UpdateIf(colPurchaseLines, PurchaseItemsGallery.Selected.Item_No = ThisRecord.Item_No ,{Quantity: Value(QuantityVal.Value)})
                         Value: =ThisItem.Quantity
+                        Visible: =false
                         Width: =124
                         X: =1130
                         Y: =39
@@ -495,6 +507,7 @@
                         PaddingLeft: =0
                         Size: =13
                         Text: ="Description"
+                        Visible: =false
                         Width: =534
                         X: =42
                         Y: =104
@@ -507,6 +520,7 @@
                         FontColor: =
                         Height: =40
                         Value: =ThisItem.Description
+                        Visible: =false
                         Width: =534
                         X: =42
                         Y: =127
@@ -531,6 +545,7 @@
                         PaddingLeft: =0
                         Size: =13
                         Text: ="Unit Of Measure"
+                        Visible: =false
                         Width: =194
                         X: =600
                         Y: =104
@@ -543,6 +558,7 @@
                         FontColor: =
                         Height: =40
                         Value: =ThisItem.Unit_Of_Measure
+                        Visible: =false
                         Width: =194
                         X: =600
                         Y: =127
@@ -567,6 +583,7 @@
                         PaddingLeft: =0
                         Size: =13
                         Text: ="LOT No."
+                        Visible: =false
                         Width: =208
                         X: =821
                         Y: =104
@@ -579,6 +596,7 @@
                         FontColor: =
                         Height: =38
                         Value: =ThisItem.LOT_No
+                        Visible: =false
                         Width: =208
                         X: =821
                         Y: =127
@@ -603,6 +621,7 @@
                         PaddingLeft: =0
                         Size: =13
                         Text: ="Exp Date"
+                        Visible: =false
                         Width: =194
                         X: =1060
                         Y: =104
@@ -615,6 +634,7 @@
                         FontColor: =
                         Height: =38
                         Value: =ThisItem.Exp_Date
+                        Visible: =false
                         Width: =194
                         X: =1060
                         Y: =127
@@ -626,6 +646,7 @@
                 Height: =32
                 Size: =20
                 Text: ="Purchase"
+                Visible: =false
                 Weight: ='TextCanvas.Weight'.Bold
                 Width: =96
                 X: =13
@@ -638,6 +659,7 @@
                 Height: =29
                 Size: =20
                 Text: ="Purchase items"
+                Visible: =false
                 Weight: ='TextCanvas.Weight'.Bold
                 Width: =150
                 X: =13
@@ -664,6 +686,7 @@
                     PaddingLeft: =0
                     Size: =13
                     Text: ="Document Type"
+                    Visible: =false
                     X: =28
                     Y: =40
                     ZIndex: =4
@@ -676,6 +699,7 @@
                     FontSize: =13
                     Height: =40
                     Value: =purchase_header.Document_Type
+                    Visible: =false
                     Width: =150
                     X: =28
                     Y: =63
@@ -701,6 +725,7 @@
                     PaddingLeft: =0
                     Size: =13
                     Text: ="Buy from Vendor No."
+                    Visible: =false
                     Width: =205
                     X: =206
                     Y: =40
@@ -714,6 +739,7 @@
                     FontSize: =13
                     Height: =40
                     Value: =purchase_header.'Buy-from_Vendor_No.'
+                    Visible: =false
                     Width: =205
                     X: =206
                     Y: =63
@@ -739,6 +765,7 @@
                     PaddingLeft: =0
                     Size: =13
                     Text: ="No."
+                    Visible: =false
                     Width: =163
                     X: =441
                     Y: =40
@@ -752,6 +779,7 @@
                     FontSize: =13
                     Height: =40
                     Value: =purchase_header.'No.'
+                    Visible: =false
                     Width: =163
                     X: =441
                     Y: =63
@@ -777,6 +805,7 @@
                     PaddingLeft: =0
                     Size: =13
                     Text: ="Ship to Name"
+                    Visible: =false
                     Width: =246
                     X: =635
                     Y: =40
@@ -790,6 +819,7 @@
                     FontSize: =13
                     Height: =40
                     Value: =purchase_header.'Ship-to_Name'
+                    Visible: =false
                     Width: =246
                     X: =635
                     Y: =63
@@ -815,6 +845,7 @@
                     PaddingLeft: =0
                     Size: =13
                     Text: ="Ship to Name 2"
+                    Visible: =false
                     Width: =194
                     X: =909
                     Y: =40
@@ -828,6 +859,7 @@
                     FontSize: =13
                     Height: =40
                     Value: =purchase_header.'Ship-to_Name_2'
+                    Visible: =false
                     Width: =194
                     X: =909
                     Y: =63
@@ -853,6 +885,7 @@
                     PaddingLeft: =0
                     Size: =13
                     Text: ="Order Date"
+                    Visible: =false
                     Width: =186
                     X: =1127
                     Y: =40
@@ -866,6 +899,7 @@
                     FontSize: =13
                     Height: =40
                     Value: =purchase_header.Order_Date
+                    Visible: =false
                     Width: =186
                     X: =1127
                     Y: =63
