--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -91,6 +91,10 @@
             PaddingLeft: =2
             PaddingRight: =2
             PaddingTop: =2
+            RadiusBottomLeft: =4
+            RadiusBottomRight: =4
+            RadiusTopLeft: =4
+            RadiusTopRight: =4
             ZIndex: =3
 
             vrtcon_GetAllFiles As groupContainer.verticalAutoLayoutContainer:
@@ -106,6 +110,10 @@
                 PaddingLeft: =10
                 PaddingRight: =10
                 PaddingTop: =10
+                RadiusBottomLeft: =4
+                RadiusBottomRight: =4
+                RadiusTopLeft: =4
+                RadiusTopRight: =4
                 Width: =Parent.Width
                 ZIndex: =7
 
@@ -119,6 +127,10 @@
                     LayoutMinWidth: =250
                     LayoutMode: =LayoutMode.Auto
                     LayoutWrap: =true
+                    RadiusBottomLeft: =4
+                    RadiusBottomRight: =4
+                    RadiusTopLeft: =4
+                    RadiusTopRight: =4
                     Visible: =false
                     Width: =Parent.Width
                     ZIndex: =1
@@ -237,6 +249,10 @@
                     LayoutMode: =LayoutMode.Auto
                     LayoutWrap: =true
                     PaddingBottom: =10
+                    RadiusBottomLeft: =4
+                    RadiusBottomRight: =4
+                    RadiusTopLeft: =4
+                    RadiusTopRight: =4
                     Width: =Parent.Width
                     ZIndex: =2
 
@@ -257,12 +273,12 @@
                             AccessibleLabel: =""
                             BasePaletteColor: =
                             DefaultSelectedItems: |-
-                                =[{Id: "All", Text: "Svi statusi"}]
+                                =[{Id: "All", Text: "All"}]
                             DisplayMode: =DisplayMode.Edit
                             FontSize: =18
                             Height: =Parent.Height
                             Items: |-
-                                =[{Id: "All", Text: "Svi statusi"}, {Id: "ReadyForProcessing", Text: "Spremni za procesiranje"}, {Id: "InProgress", Text: "U obradi"}]
+                                =[{Id: "All", Text: "All"}, {Id: "ReadyForProcessing", Text: "Ready for processing"}, {Id: "InProgress", Text: "In progress"}]
                             OnChange: |-
                                 =If(
                                     Not(dd_FileType.Selected.Id = "0"),
@@ -337,7 +353,7 @@
                                 =[
                                     {
                                         Id: "0",
-                                        Text: "Svi dokumenti"
+                                        Text: "All"
                                     }
                                 ]
                             DisplayMode: =DisplayMode.Edit
@@ -347,7 +363,7 @@
                                 =[
                                     {
                                         Id: "0",
-                                        Text: "Svi dokumenti"
+                                        Text: "All"
                                     },
                                     {
                                         Id: "01",
