--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -138,6 +138,7 @@
     "scr_XMLNalogZaProdaju",
     "scr_XMLOtpremnice",
     "scr_XMLPrimke",
-    "scr_XMLTemeljniceInventure"
+    "scr_XMLTemeljniceInventure",
+    "Screen2"
   ]
 }
