--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -93,196 +93,157 @@
             Y: =15
             ZIndex: =2
 
-            "PurchaseItemsGallery As gallery.'BrowseLayout_Vertical_OneTextVariant_ver5.0'":
-                BorderColor: =RGBA(89, 0, 0, 1)
-                BorderThickness: =0.5
-                Default: |
-                    =If(!IsBlank(scannedItem),First(Filter(colPurchaseLines, ThisRecord.Line_No = Text(scannedItem))), First(colPurchaseLines))
-                DelayItemLoading: =true
-                Height: =375
-                Items: =colPurchaseLines
-                Layout: =Layout.Vertical
-                LoadingSpinner: =LoadingSpinner.Data
-                TemplatePadding: =0
-                TemplateSize: =194
-                Visible: =false
-                Width: =1284
-                X: =28
-                Y: =169
-                ZIndex: =1
-
-                Separator1 As rectangle:
-                    BorderColor: =RGBA(89, 0, 0, 1)
-                    BorderThickness: =0.5
-                    Fill: =RGBA(189, 49, 51, 1)
-                    Height: =2
-                    OnSelect: =Select(Parent)
-                    Width: =Parent.TemplateWidth
-                    Y: =Parent.TemplateHeight - Self.Height
-                    ZIndex: =3
-
-                Rectangle1 As rectangle:
-                    BorderColor: =RGBA(89, 0, 0, 1)
-                    Fill: =RGBA(89, 0, 0, 1)
-                    Height: =Parent.TemplateHeight - Separator1.Height
-                    OnSelect: =Select(Parent)
-                    Visible: =ThisItem.IsSelected
-                    Width: =4
-                    ZIndex: =4
-
-                Group9 As group:
-                    Height: =5
-                    Width: =5
-                    X: =60
-                    Y: =60
-                    ZIndex: =46
-
-                    Label2_20 As label:
-                        Align: =Align.Center
-                        BorderColor: =RGBA(89, 0, 0, 1)
-                        BorderThickness: =0.5
-                        Color: =RGBA(0, 0, 0, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        Height: =23
-                        OnSelect: =Select(Parent)
-                        PaddingBottom: =10
-                        PaddingLeft: =0
-                        Size: =13
-                        Text: ="Quantity"
-                        Width: =124
-                        X: =1130
-                        Y: =17
-                        ZIndex: =30
-
-                    "QuantityVal As 'Text input'":
-                        Align: ='TextInputCanvas.Align'.Center
-                        BasePaletteColor: =
-                        DisplayMode: =DisplayMode.Edit
-                        FontColor: =
-                        Height: =31
-                        OnChange: |-
-                            =UpdateIf(colPurchaseLines, PurchaseItemsGallery.Selected.Item_No = ThisRecord.Item_No ,{Quantity: Value(QuantityVal.Value)})
-                        Value: =ThisItem.Quantity
-                        Width: =124
-                        X: =1130
-                        Y: =39
-                        ZIndex: =41
-
-            Container6 As groupContainer.verticalAutoLayoutContainer:
-                DropShadow: =DropShadow.Light
-                Height: =Parent.Height
-                LayoutDirection: =LayoutDirection.Vertical
-                LayoutMode: =LayoutMode.Auto
-                RadiusBottomLeft: =4
-                RadiusBottomRight: =4
-                RadiusTopLeft: =4
-                RadiusTopRight: =4
+            Canvas2_1 As fluidGrid.fluidGridWithBlankCard:
+                BorderThickness: =0
+                Height: =677
                 Width: =Parent.Width
-                ZIndex: =25
+                ZIndex: =28
 
-                "NabavniNalogLines As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
-                    BorderColor: =RGBA(89, 0, 0, 1)
-                    DelayItemLoading: =true
-                    Height: =Parent.Height
-                    Items: =colPurchaseLines
-                    Layout: =Layout.Vertical
-                    LayoutMinHeight: =287
-                    LayoutMinWidth: =320
-                    LoadingSpinner: =LoadingSpinner.Data
-                    TemplatePadding: =0
-                    TemplateSize: =116
+                DataCard6_1 As dataCard:
+                    BorderColor: =RGBA(0, 0, 0, 1)
+                    BorderStyle: =BorderStyle.Solid
+                    BorderThickness: =0
+                    DisplayMode: =DisplayMode.Edit
+                    Fill: =RGBA(0, 0, 0, 0)
+                    Height: =390
                     Width: =Parent.Width
+                    X: =0
+                    Y: =0
                     ZIndex: =1
 
-                    Title5 As label:
-                        Color: =RGBA(50, 49, 48, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
-                        OnSelect: =Select(Parent)
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Text: =ThisItem.'Buy-from_Vendor_No.'
-                        VerticalAlign: =VerticalAlign.Top
-                        Width: =Parent.TemplateWidth - 86
-                        X: =16
-                        Y: =(Parent.TemplateHeight - (Self.Size*1.8 + Subtitle4.Size*1.8 + 2 + Body1.Size*1.8)) / 2
+                    Container14 As groupContainer.manualLayoutContainer:
+                        DropShadow: =DropShadow.Light
+                        Height: =390
+                        RadiusBottomLeft: =4
+                        RadiusBottomRight: =4
+                        RadiusTopLeft: =4
+                        RadiusTopRight: =4
+                        Width: =1366
                         ZIndex: =1
 
-                    Subtitle4 As label:
-                        Color: =RGBA(0, 0, 0, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
-                        OnSelect: =Select(Parent)
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =12
-                        Text: =ThisItem.Description
-                        VerticalAlign: =VerticalAlign.Top
-                        Width: =Title5.Width
-                        X: =Title5.X
-                        Y: =Title5.Y + Title5.Height
-                        ZIndex: =2
+                        TextCanvas4 As Text:
+                            Align: ='TextCanvas.Align'.Start
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =30
+                            Text: |-
+                                ="Broj naloga : " & purchase_header.'No.'
+                            Width: =282
+                            X: =20
+                            Y: =0
+                            ZIndex: =1
 
-                    Body1 As label:
-                        Color: =RGBA(0, 0, 0, 1)
-                        DisabledColor: =RGBA(166, 166, 166, 1)
-                        FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                        Height: =Self.Size * 1.8
-                        OnSelect: =Select(Parent)
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Size: =12
-                        Text: =ThisItem.Document_No
-                        VerticalAlign: =VerticalAlign.Top
-                        Width: =Title5.Width
-                        X: =Title5.X
-                        Y: =Subtitle4.Y + Subtitle4.Height
-                        ZIndex: =3
+                DataCard7 As dataCard.blankCard:
+                    BorderColor: =RGBA(0, 0, 0, 1)
+                    BorderStyle: =BorderStyle.Solid
+                    DisplayMode: =DisplayMode.Edit
+                    Fill: =RGBA(0, 0, 0, 0)
+                    Height: =388
+                    Width: =1366
+                    X: =0
+                    Y: =1
+                    ZIndex: =2
 
-                    NextArrow5 As icon.ChevronRight:
-                        AccessibleLabel: =Self.Tooltip
+                    "NabavniNalogLines As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                         BorderColor: =RGBA(89, 0, 0, 1)
-                        Color: =RGBA(166, 166, 166, 1)
-                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                        DisabledColor: =RGBA(244, 244, 244, 1)
-                        Height: =50
-                        Icon: =Icon.ChevronRight
-                        OnSelect: =Select(Parent)
-                        PaddingBottom: =16
-                        PaddingLeft: =16
-                        PaddingRight: =16
-                        PaddingTop: =16
-                        Tooltip: ="View item details"
-                        Width: =50
-                        X: =Parent.TemplateWidth - Self.Width - 12
-                        Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
-                        ZIndex: =4
+                        DelayItemLoading: =true
+                        Height: =185
+                        Items: =colPurchaseLines
+                        Layout: =Layout.Vertical
+                        LoadingSpinner: =LoadingSpinner.Data
+                        TemplatePadding: =0
+                        TemplateSize: =116
+                        Width: =Parent.Width
+                        ZIndex: =1
 
-                    Separator6 As rectangle:
-                        BorderColor: =RGBA(89, 0, 0, 1)
-                        Fill: =RGBA(255, 255, 255, 1)
-                        Height: =8
-                        OnSelect: =Select(Parent)
-                        Width: =Parent.TemplateWidth
-                        Y: =Parent.TemplateHeight - Self.Height
-                        ZIndex: =5
+                        Title5 As label:
+                            Color: =RGBA(50, 49, 48, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                            Height: =Self.Size * 1.8
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Text: =ThisItem.'Buy-from_Vendor_No.'
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =Parent.TemplateWidth - 86
+                            X: =16
+                            Y: =(Parent.TemplateHeight - (Self.Size*1.8 + Subtitle4.Size*1.8 + 2 + Body1.Size*1.8)) / 2
+                            ZIndex: =1
 
-                    Rectangle5 As rectangle:
-                        BorderColor: =RGBA(89, 0, 0, 1)
-                        Fill: =RGBA(89, 0, 0, 1)
-                        Height: =Parent.TemplateHeight - Separator6.Height
-                        OnSelect: =Select(Parent)
-                        Visible: =ThisItem.IsSelected
-                        Width: =4
-                        ZIndex: =6
+                        Subtitle4 As label:
+                            Color: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                            Height: =Self.Size * 1.8
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Size: =12
+                            Text: =ThisItem.Description
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =Title5.Width
+                            X: =Title5.X
+                            Y: =Title5.Y + Title5.Height
+                            ZIndex: =2
+
+                        Body1 As label:
+                            Color: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                            Height: =Self.Size * 1.8
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Size: =12
+                            Text: =ThisItem.Document_No
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =Title5.Width
+                            X: =Title5.X
+                            Y: =Subtitle4.Y + Subtitle4.Height
+                            ZIndex: =3
+
+                        NextArrow5 As icon.ChevronRight:
+                            AccessibleLabel: =Self.Tooltip
+                            BorderColor: =RGBA(89, 0, 0, 1)
+                            Color: =RGBA(166, 166, 166, 1)
+                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            DisabledColor: =RGBA(244, 244, 244, 1)
+                            Height: =50
+                            Icon: =Icon.ChevronRight
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =16
+                            PaddingLeft: =16
+                            PaddingRight: =16
+                            PaddingTop: =16
+                            Tooltip: ="View item details"
+                            Width: =50
+                            X: =Parent.TemplateWidth - Self.Width - 12
+                            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
+                            ZIndex: =4
+
+                        Separator6 As rectangle:
+                            BorderColor: =RGBA(89, 0, 0, 1)
+                            Fill: =RGBA(255, 255, 255, 1)
+                            Height: =8
+                            OnSelect: =Select(Parent)
+                            Width: =Parent.TemplateWidth
+                            Y: =Parent.TemplateHeight - Self.Height
+                            ZIndex: =5
+
+                        Rectangle5 As rectangle:
+                            BorderColor: =RGBA(89, 0, 0, 1)
+                            Fill: =RGBA(89, 0, 0, 1)
+                            Height: =Parent.TemplateHeight - Separator6.Height
+                            OnSelect: =Select(Parent)
+                            Visible: =ThisItem.IsSelected
+                            Width: =4
+                            ZIndex: =6
 
         Spinner2_1 As Spinner:
             AlignInContainer: =AlignInContainer.Stretch
